# ai-102

./: pyproject.toml
02-ocr/: app.py
foundry/: app.py
