[project]
name = "ai-102"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "azure-ai-vision-imageanalysis==1.0.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
