[project]
name = "ai-102"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-ai-vision-face==1.0.0b2",
    "azure-ai-vision-imageanalysis==1.0.0",
    "azure-cognitiveservices-vision-customvision>=3.1.1",
    "azure-identity>=1.25.1",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
